I loathe my inefficiency